--- a/style.css
+++ b/style.css
@@ -1,1 +1,20 @@
 
+
+
+.game-board{
+
+    background-color: blanchedalmond;
+    display: grid;
+    height: 500px;
+    width: 500px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+
+
+}
+
+.game-square{
+    background-color: lightblue;
+
+    border: 1px solid black;
+}
