--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
 
 
 
+
+.game{
+    display: flex;
+    flex-direction: column;
+    background-color: azure;
+    align-items: center;
+
+}
+
 .game-board{
 
     background-color: blanchedalmond;
@@ -14,7 +23,53 @@
 }
 
 .game-square{
+    flex: 0;
+    display: grid;
+    grid-template-columns: 1fr 4fr 1fr;
+    grid-template-rows: 1fr 4fr 1fr;
     background-color: lightblue;
-
+    justify-items: center;
     border: 1px solid black;
+}
+
+
+.cellID{
+    font-size: .8rem;
+    grid-area: 1 / 1 / 2 / 3;
+    justify-self: flex-start;
+}
+
+.cell-content{
+    font-size: 5rem;
+    grid-area: 2 / 2 / 3 / 3;
+}
+
+
+#scoreboard{
+    width: 100%;
+    height: 200px;
+    display: grid;
+
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+
+    outline: 1px blue dotted;
+}
+
+#turn-indicator{
+    grid-area: 1 / 2 / 3 / 3;
+    display: flex;
+
+    align-items: center;
+    gap: 10px;
+    outline: 1px red dotted;
+    width:100%;
+    height: 100%;
+}
+
+#turn-header{
+
+}
+#turn-text{
+    font-size: 24px;
 }
