--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
 }
 
 
-.cellID{
+.squareID{
     font-size: .8rem;
     grid-area: 1 / 1 / 2 / 3;
     justify-self: flex-start;
@@ -72,4 +72,8 @@
 }
 #turn-text{
     font-size: 24px;
+}
+
+.selected-square{
+    background-color:darkturquoise;
 }
