--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 }
 body{
     display: flex;
+    gap: 20px;
     flex-direction: column;
     align-items: center;
     background-color: var(--body-bg-color, white);
@@ -31,7 +32,7 @@ body{
 }
 
 .game-board{
-    
+   
     background-color: rgb(36, 36, 35);
     display: grid;
     height: min(500px, 80vw);
@@ -44,12 +45,13 @@ body{
 }
 
 .game-square{
-    flex: 0;
+    
     display: grid;
-    grid-template-columns: 1fr 4fr 1fr;
+    grid-template-columns: 1fr 6fr 1fr;
     grid-template-rows: 1fr 4fr 1fr;
     background-color: var(--square-bg-color);
     justify-items: center;
+    align-items: center;
     
  
 }
@@ -62,18 +64,25 @@ body{
 }
 
 .square-content{
-    font-size: 5rem;
+    /* font-size: clamp(3rem, 4rem, 5rem); */
+    
+    
+
+    text-align: center;
+
+    font-size: max(50px, 9vw);
     grid-area: 2 / 2 / 3 / 3;
-}in
+}
 
 .square-value{
+    
     font-size: .8rem;
     grid-area: 3 / 3 / 4 / 4;
 }
 
 #scoreboard{
     width: 100%;
-    height: 200px;
+    height: 100px;
     display: grid;
 
     border-radius: 10px;
@@ -85,26 +94,18 @@ body{
     color: white;
 }
 
-#turn-indicator{
-    grid-area: 1 / 2 / 2 / 3;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    outline: 1px red dotted;
-    width:100%;
-    height: 100%;
-}
 
 #turn-header{
     grid-area: 1 / 2 / 2 / 3;
     text-align: center;
+    font-size: 20px;
 
 }
 #turn-text{
     grid-area: 2 / 2 / 3 / 3;
-    font-size: 24px;
+    font-size: 20px;
     text-align: center;
+    margin: 0;
 }
 
 #name-label{
@@ -116,6 +117,7 @@ body{
 }
 
 #description{
+    margin-top: 10px;
     height: 10vh;
     font-size: clamp(1.2rem, 20px, 2rem);
     padding: 5px;
@@ -130,6 +132,10 @@ label{
     margin-left: 1rem;
 }
 
+#start-button{
+
+    font-size: clamp(1.1rem, 24px, 2rem);
+}
 
 button, input[type="button"]{
     background-color: var(--button-bg-color, black);
